Bug 101340 - i915_surface.c:108:4: error: too few arguments to function ‘util_blitter_default_src_texture’
Summary: i915_surface.c:108:4: error: too few arguments to function ‘util_blitter_defa...
Status: RESOLVED FIXED
Alias: None
Product: Mesa
Classification: Unclassified
Component: Other (show other bugs)
Version: git
Hardware: All Linux (All)
: medium normal
Assignee: mesa-dev
QA Contact: mesa-dev
URL:
Whiteboard:
Keywords: bisected, regression
Depends on:
Blocks:
 
Reported: 2017-06-08 06:59 UTC by Fabio Pedretti
Modified: 2017-09-04 17:34 UTC (History)
2 users (show)

See Also:
i915 platform:
i915 features:


Attachments

Description Fabio Pedretti 2017-06-08 06:59:50 UTC
I get the following error since yesterday.
Full build log here: https://launchpadlibrarian.net/323078543/buildlog_ubuntu-yakkety-i386.mesa_17.2~git1706080730.f1ba51~gd~y_BUILDING.txt.gz

../../../../../../src/gallium/drivers/i915/i915_surface.c: In function ‘i915_surface_copy_render’:
../../../../../../src/gallium/drivers/i915/i915_surface.c:108:37: warning: passing argument 1 of ‘util_blitter_default_src_texture’ from incompatible pointer type [-Wincompatible-pointer-types]
    util_blitter_default_src_texture(&src_templ, src, src_level);
                                     ^
In file included from ../../../../../../src/gallium/drivers/i915/i915_context.h:41:0,
                 from ../../../../../../src/gallium/drivers/i915/i915_blit.h:31,
                 from ../../../../../../src/gallium/drivers/i915/i915_surface.c:31:
../../../../../../src/gallium/auxiliary/util/u_blitter.h:271:6: note: expected ‘struct blitter_context *’ but argument is of type ‘struct pipe_sampler_view *’
 void util_blitter_default_src_texture(struct blitter_context *blitter,
      ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
../../../../../../src/gallium/drivers/i915/i915_surface.c:108:49: warning: passing argument 2 of ‘util_blitter_default_src_texture’ from incompatible pointer type [-Wincompatible-pointer-types]
    util_blitter_default_src_texture(&src_templ, src, src_level);
                                                 ^~~
In file included from ../../../../../../src/gallium/drivers/i915/i915_context.h:41:0,
                 from ../../../../../../src/gallium/drivers/i915/i915_blit.h:31,
                 from ../../../../../../src/gallium/drivers/i915/i915_surface.c:31:
../../../../../../src/gallium/auxiliary/util/u_blitter.h:271:6: note: expected ‘struct pipe_sampler_view *’ but argument is of type ‘struct pipe_resource *’
 void util_blitter_default_src_texture(struct blitter_context *blitter,
      ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
../../../../../../src/gallium/drivers/i915/i915_surface.c:108:54: warning: passing argument 3 of ‘util_blitter_default_src_texture’ makes pointer from integer without a cast [-Wint-conversion]
    util_blitter_default_src_texture(&src_templ, src, src_level);
                                                      ^~~~~~~~~
In file included from ../../../../../../src/gallium/drivers/i915/i915_context.h:41:0,
                 from ../../../../../../src/gallium/drivers/i915/i915_blit.h:31,
                 from ../../../../../../src/gallium/drivers/i915/i915_surface.c:31:
../../../../../../src/gallium/auxiliary/util/u_blitter.h:271:6: note: expected ‘struct pipe_resource *’ but argument is of type ‘unsigned int’
 void util_blitter_default_src_texture(struct blitter_context *blitter,
      ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
../../../../../../src/gallium/drivers/i915/i915_surface.c:108:4: error: too few arguments to function ‘util_blitter_default_src_texture’
    util_blitter_default_src_texture(&src_templ, src, src_level);
    ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
In file included from ../../../../../../src/gallium/drivers/i915/i915_context.h:41:0,
                 from ../../../../../../src/gallium/drivers/i915/i915_blit.h:31,
                 from ../../../../../../src/gallium/drivers/i915/i915_surface.c:31:
../../../../../../src/gallium/auxiliary/util/u_blitter.h:271:6: note: declared here
 void util_blitter_default_src_texture(struct blitter_context *blitter,
      ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
../../../../../../src/gallium/drivers/i915/i915_surface.c: In function ‘i915_surface_copy_blitter’:
../../../../../../src/gallium/drivers/i915/i915_surface.c:213:26: warning: unused variable ‘spt’ [-Wunused-variable]
    struct pipe_resource *spt = &src_tex->b.b;
                          ^~~
Makefile:722: recipe for target 'i915_surface.lo' failed
Comment 1 Vinson Lee 2017-06-08 07:11:41 UTC
commit a893c916973384ad64f20159cca04c0e71652f36
Author: Marek Olšák <marek.olsak@amd.com>
Date:   Tue May 30 23:52:07 2017 +0200

    gallium/u_blitter: use 2D_ARRAY for cubemap blits if possible
    
    so that we can use TXF.
    
    The cubemap blit pixel shader code size: 148 -> 92 bytes
    
    Reviewed-by: Nicolai Hähnle <nicolai.haehnle@amd.com>
Comment 2 Emil Velikov 2017-09-04 17:34:52 UTC
Resolved, as pointed out by Vinson.


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.